--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Emperor Cloudy Skies</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
 	<li><a href="index.html">visit Home</a></li>
