--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<br>
 	<li><a href="animation.html">visit animation</a></li>
 	<br>
-	<li><a href="colorchange.html">colorchange</a></li>
+	<li><a href="colorchange.html">visit Emotion Change</a></li>
 	<br>
-	<li><a href="Final Video.html">visit Finalvideo </a></li>
+	<li><a href="Final Video.html">visit Welcome to emperor cloudy skies</a></li>
 	<h1>Welcome to emperor cloudy skies</h1>
 	<p>This is Teddy penguin, he is teal with an orange nose. He has a unique shape to him, similar to a tear drop. They are able to express there emotions by changing color. At times his eyes may shift, the left one stays up and the right one droops down.</p>
 	<img src="TeddyP.jpg"></img>
