--- a/finalvideo.html
+++ b/finalvideo.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
-	</li><a href="index.html">visit home</a>
+	<a href="index.html">visit home</a>
 	<h1>Final Video</h1>
 	<h2>Hope you enjoy!</h2>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/61LvbbTIoQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
