--- a/origin.html
+++ b/origin.html
@@ -10,7 +10,7 @@
 	<li><a href="index.html">visit home</a>
 	<h1> This is a place of peace and harmony </h1>
 	<p>This is a place of peace and harmony. They maintain it by mediating every evening and listening to soothing music.The weather is always the same. There is always music playing.They're favorite thing to have is coffee, its very popular.</p>
-	<img src="cloudsblue.png"></img>
+	<img src="cloudsblue.png" width=400px>
 
 </body>
 </html>
