--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
-	<ul>
 	<li><a href="index.html">visit Home</a></li>
 	<br>
 	<li><a href="origin.html">visit origin</a></li>
@@ -17,10 +16,9 @@
 	<li><a href="colorchange.html">visit Emotion Change</a></li>
 	<br>
 	<li><a href="finalvideo.html">visit Welcome to emperor cloudy skies</a></li>
-		</ul
 	<h1>Welcome to emperor cloudy skies</h1>
 	<p>This is Teddy penguin, he is teal with an orange nose. He has a unique shape to him, similar to a tear drop. They are able to express there emotions by changing color. At times his eyes may shift, the left one stays up and the right one droops down.</p>
-	<img src="TeddyP.jpg"></img>
+	<img src="TeddyP.jpg">
 	
 
 	
