--- a/animation.html
+++ b/animation.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>My animation</title>
+	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
 	<li><a href="colorchange.html">colorchange</a></li>
