--- a/audio.html
+++ b/audio.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Project1</title>
+	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
 	<li><a href="animation.html">visit animation</a></li>
