--- a/origin.html
+++ b/origin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Emperor Cloudy SKies</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
 	<li><a href="audio.html">visit audio</a></li>
